--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,12 @@
+<div class="topHeaderMargin" ng-include="'views/header.html'"></div>
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <h2 class="text-center labelStyle">Welcome to Homepage </h2>
-        <h3 class="text-center labelStyle space">User Info:</h3>
-        <h4 class="labelStyle text-left">Company name: {{ usr.name }}</h4>
-        <!-- <h4 class="labelStyle text-left">Database name: {{ usr.name }}</h4> -->
-        <h4 class="labelStyle text-left">UserID: {{ usr.user_id}}</h4>		
-        <h4 class="labelStyle text-left">Username: {{ usr.user_name}}</h4>
-        <h4 class="labelStyle text-left">Password: {{ usr.password}}</h4>
-        <a href="" class="btn btn-danger" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+    <div class="col-md-4">
+       
     </div>
+    <div class="col-md-4 text-center btnInvoice"><a class="btn btn-info btn-lg" ng-click="goToFaktura()"><span class="glyphicon glyphicon-file"></span> Faktura </a></div>
+    <div class="col-md-4">
+        <!-- comment--> DatabaseName:{{usr.database_name}}<br />
+       ActionLogTable:{{usrdb.table_name}}
+    </div>
+    
 </div>
